# MachineLearning_scratch

./: .gitignore  CMakeLists.txt  Makefile  README.md  logistic_regression_weights  result
common/: utils.h
course/Python-Machine-Learning-Algorithm-master/Chapter_1 Logistic Regression/: lr_test.py  lr_train.py  weights
course/Python-Machine-Learning-Algorithm-master/Chapter_2 Softmax Regression/: weights  weights.1
data/: binary.txt  continuous.txt
examples/FactorizationMachine/: CMakeLists.txt  test.cpp  train.cpp
examples/LogisticRegression/: CMakeLists.txt  model.h  test.cpp  train.cpp
examples/Softmax/: CMakeLists.txt  model.h  test.cpp  train.cpp
